# AccountSystem

./: README.md
AccountSystem/: CMakeLists.txt  addwin.cpp  addwin.h  addwin.ui  global.h  icon.rc  main.cpp  mainwin.cpp  mainwin.h  mainwin.ui  res.qrc
AccountSystem/custom/: classifytreewidget.cpp  classifytreewidget.h  recordtreewidget.cpp  recordtreewidget.h  treewidget.cpp  treewidget.h
AccountSystem/db/: account.cpp  account.h  analysifilter.cpp  analysifilter.h  book.cpp  book.h  database.cpp  database.h  record.cpp  record.h  recordfilter.cpp  recordfilter.h
AccountSystem/dev/: classify.cpp  config.cpp  config.h
AccountSystem/qss/: style.qss
AccountSystem/ui/: addwin.cpp  addwin.h  addwin.ui  recordWin .ui.bak  recordWin.cpp  recordWin.h  recordWin.ui  textcandidate.cpp  textcandidate.h  textcandidate.ui
DB/: AccountData.db  createTable.sql
build-AccountSystem-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build-AccountSystem-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/.cmake/api/v1/reply/: cache-v2-d04d645f6dcf5bab999a.json  directory-.-Debug-181dc239bd5f0b4ea3b9.json  target-AccountSystem-Debug-8846b69799da7721921d.json  target-AccountSystem_autogen_timestamp_deps-Debug-ba2ba5b89f5d4e19b4cd.json
build-AccountSystem-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/.cmake/api/v1/reply.prev/: cmakeFiles-v1-16bda90e34d829003d09.json  cmakeFiles-v1-25a0cc834588dbe797d2.json  codemodel-v2-9588f8818ab3ca4b1462.json  index-2023-11-08T12-15-03-0981.json  index-2023-11-08T14-22-51-0241.json  target-AccountSystem_autogen-Debug-76c582dfcb8f9812e30f.json
build-AccountSystem-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-AccountSystem-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/.qtc_clangd/.cache/clangd/index/: QApplication.1AB1633F5548ACA7.idx  QCheckBox.64FDB1A95A9E30C9.idx  QDate.ED476CA3584150F6.idx  QDateEdit.6F15EAB335143F84.idx  QDebug.5C690E90F28A5C80.idx  QDoubleSpinBox.45B63137076D089F.idx  QFrame.A97551BCC2DFCD2F.idx  QGridLayout.251A2C539F55BA0D.idx  QHeaderView.36F8A15388ADD91D.idx  QLabel.C82038B45C81C57D.idx  QLineEdit.18E5A0FB3CC16A64.idx  QMainWindow.98F9A875998C6903.idx  QWidget.FBB791629F6A18C9.idx  (+360 more)
build-AccountSystem-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/AccountSystem_autogen/: deps  mocs_compilation.cpp
build-AccountSystem-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/AccountSystem_autogen/EWIEGA46WW/: moc_mainwin.cpp  moc_mainwin.cpp.d  qrc_res.cpp
build-AccountSystem-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/AccountSystem_autogen/include/: ui_addwin.h  ui_mainwin.h
build-AccountSystem-Desktop_Qt_5_15_2_MinGW_64_bit-Release/AccountSystem_autogen/: mocs_compilation.cpp
build-AccountSystem-Desktop_Qt_5_15_2_MinGW_64_bit-Release/AccountSystem_autogen/EWIEGA46WW/: qrc_res.cpp
build-AccountSystem-Desktop_Qt_5_15_2_MinGW_64_bit-Release/AccountSystem_autogen/include/: ui_mainwin.h
账目系统/: 字段.xlsx
